<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgetPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/forget_password"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/email_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="75dp"
                android:hint="@string/enter_your_email"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/send_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/button_shape"
                android:textColor="@android:color/white"
                android:onClick="btnClick"/>

        </LinearLayout>

    </LinearLayout>
</layout>